// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — anomaly (role-based) > Anomaly: Aurora(Caster) vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Aurora(Caster) vs Rammus",
  "seed": 7,
  "snapshotCount": 587,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 786.9,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1553.1,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 786.9,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Briar(Fighter) vs Illaoi 1`] = `
{
  "duration": 11.1,
  "logCounts": {
    "ability": 5,
    "attack": 24,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Briar(Fighter) vs Illaoi",
  "seed": 7,
  "snapshotCount": 335,
  "units": [
    {
      "alive": true,
      "attackCount": 16,
      "castCount": 4,
      "championApi": "TFT17_Briar",
      "finalHp": 714.5,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2058.24,
      "totalDamageTaken": 695,
    },
    {
      "alive": false,
      "attackCount": 8,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 695,
      "totalDamageTaken": 2058.24,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Jinx(Marksman) vs Rammus 1`] = `
{
  "duration": 13.3667,
  "logCounts": {
    "ability": 4,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Jinx(Marksman) vs Rammus",
  "seed": 7,
  "snapshotCount": 403,
  "units": [
    {
      "alive": false,
      "attackCount": 18,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1181.12,
      "totalDamageTaken": 1052.5,
    },
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1158.88,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1052.5,
      "totalDamageTaken": 1181.12,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Rammus(Tank) vs Jinx 1`] = `
{
  "duration": 16.4667,
  "logCounts": {
    "ability": 1,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Rammus(Tank) vs Jinx",
  "seed": 7,
  "snapshotCount": 496,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 2533.88,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 3440,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1044,
      "totalDamageTaken": 906.12,
    },
    {
      "alive": false,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 906.12,
      "totalDamageTaken": 1044,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — anomaly specialist (star orbit) > Anomaly: Gnar(Specialist) vs Rammus 1`] = `
{
  "duration": 5.5333,
  "logCounts": {
    "ability": 11,
    "attack": 13,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Gnar(Specialist) vs Rammus",
  "seed": 7,
  "snapshotCount": 168,
  "units": [
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 11,
      "championApi": "TFT17_Gnar",
      "finalHp": 738,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2389.62,
      "totalDamageTaken": 252,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 252,
      "totalDamageTaken": 2389.62,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Briar mirror (대칭) 1`] = `
{
  "duration": 10.4333,
  "logCounts": {
    "ability": 6,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Briar mirror (대칭)",
  "seed": 42,
  "snapshotCount": 315,
  "units": [
    {
      "alive": true,
      "attackCount": 14,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 47.93,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 650,
      "starLevel": 1,
      "team": "player",
      "totalDamageDealt": 740.74,
      "totalDamageTaken": 687.41,
    },
    {
      "alive": false,
      "attackCount": 13,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 650,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 687.41,
      "totalDamageTaken": 740.74,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Jinx+IE vs Briar (단일 스탯 아이템) 1`] = `
{
  "duration": 9.6333,
  "logCounts": {
    "ability": 3,
    "attack": 19,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Jinx+IE vs Briar (단일 스탯 아이템)",
  "seed": 42,
  "snapshotCount": 291,
  "units": [
    {
      "alive": false,
      "attackCount": 8,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1154.43,
      "totalDamageTaken": 1032,
    },
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 139.41,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1032,
      "totalDamageTaken": 1154.43,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — basic > 2v2 Akali+Jinx vs Belveth+Illaoi 1`] = `
{
  "duration": 15.3333,
  "logCounts": {
    "ability": 10,
    "attack": 47,
    "death": 2,
    "move": 16,
  },
  "scenarioName": "2v2 Akali+Jinx vs Belveth+Illaoi",
  "seed": 1337,
  "snapshotCount": 462,
  "units": [
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 3,
      "championApi": "TFT17_Akali",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 779.12,
      "totalDamageTaken": 1500.57,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-1",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 984.79,
      "totalDamageTaken": 1027.37,
    },
    {
      "alive": true,
      "attackCount": 15,
      "castCount": 3,
      "championApi": "TFT17_Belveth",
      "finalHp": 1350,
      "id": "enemy-0",
      "killCount": 2,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1666.96,
      "totalDamageTaken": 58.62,
    },
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 384.72,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 860.98,
      "totalDamageTaken": 1705.28,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Akali+Bloodthirster vs Illaoi 1`] = `
{
  "duration": 16.5,
  "logCounts": {
    "ability": 8,
    "attack": 29,
    "death": 1,
    "move": 12,
  },
  "scenarioName": "Akali+Bloodthirster vs Illaoi",
  "seed": 7,
  "snapshotCount": 497,
  "units": [
    {
      "alive": true,
      "attackCount": 18,
      "castCount": 6,
      "championApi": "TFT17_Akali",
      "finalHp": 1140.84,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2082.08,
      "totalDamageTaken": 835.9,
    },
    {
      "alive": false,
      "attackCount": 11,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 835.9,
      "totalDamageTaken": 2082.08,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Aurora+Rabadon vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+Rabadon vs Rammus",
  "seed": 7,
  "snapshotCount": 587,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 819.37,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1520.63,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 819.37,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Belveth+Deathblade vs Briar 1`] = `
{
  "duration": 9.8,
  "logCounts": {
    "ability": 4,
    "attack": 21,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Belveth+Deathblade vs Briar",
  "seed": 42,
  "snapshotCount": 296,
  "units": [
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 1,
      "championApi": "TFT17_Belveth",
      "finalHp": 445.18,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1297.69,
      "totalDamageTaken": 1047.72,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1047.72,
      "totalDamageTaken": 1297.69,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Briar+Titans vs Jinx 1`] = `
{
  "duration": 4.2,
  "logCounts": {
    "ability": 2,
    "attack": 13,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Briar+Titans vs Jinx",
  "seed": 101,
  "snapshotCount": 128,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 1080.47,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1063.56,
      "totalDamageTaken": 217.16,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 217.16,
      "totalDamageTaken": 1063.56,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Fiora+Quicksilver vs Rammus 1`] = `
{
  "duration": 3.6,
  "logCounts": {
    "ability": 2,
    "attack": 20,
    "death": 1,
    "move": 8,
  },
  "scenarioName": "Fiora+Quicksilver vs Rammus",
  "seed": 7,
  "snapshotCount": 110,
  "units": [
    {
      "alive": true,
      "attackCount": 18,
      "castCount": 2,
      "championApi": "TFT17_Fiora",
      "finalHp": 2155.03,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2160,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2388,
      "totalDamageTaken": 130.91,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 130.91,
      "totalDamageTaken": 2388,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Illaoi+BrambleVest+Archangels vs Akali (혼합 경로) 1`] = `
{
  "duration": 24.2,
  "logCounts": {
    "ability": 11,
    "attack": 43,
    "death": 1,
    "move": 15,
  },
  "scenarioName": "Illaoi+BrambleVest+Archangels vs Akali (혼합 경로)",
  "seed": 5,
  "snapshotCount": 728,
  "units": [
    {
      "alive": false,
      "attackCount": 16,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1304.53,
      "totalDamageTaken": 2139.31,
    },
    {
      "alive": true,
      "attackCount": 27,
      "castCount": 9,
      "championApi": "TFT17_Akali",
      "finalHp": 302.18,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 2139.31,
      "totalDamageTaken": 1304.53,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Jinx+Guinsoos vs Illaoi 1`] = `
{
  "duration": 4.9333,
  "logCounts": {
    "ability": 3,
    "attack": 28,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Guinsoos vs Illaoi",
  "seed": 101,
  "snapshotCount": 150,
  "units": [
    {
      "alive": true,
      "attackCount": 26,
      "castCount": 3,
      "championApi": "TFT17_Jinx",
      "finalHp": 810,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2015.2,
      "totalDamageTaken": 180,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 180,
      "totalDamageTaken": 2015.2,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Jinx+IE+Deathblade vs Illaoi (누적 StatPatch) 1`] = `
{
  "duration": 16.2,
  "logCounts": {
    "ability": 3,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+IE+Deathblade vs Illaoi (누적 StatPatch)",
  "seed": 11,
  "snapshotCount": 488,
  "units": [
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1912.57,
      "totalDamageTaken": 1006.67,
    },
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 122.43,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1006.67,
      "totalDamageTaken": 1912.57,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Aurora+EmpathicImplant vs Rammus (Timer mana) 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+EmpathicImplant vs Rammus (Timer mana)",
  "seed": 7,
  "snapshotCount": 587,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 670.5,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1669.5,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 670.5,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+ChemicalCapacitor vs Rammus (armor shred) 1`] = `
{
  "duration": 4.9667,
  "logCounts": {
    "ability": 3,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+ChemicalCapacitor vs Rammus (armor shred)",
  "seed": 7,
  "snapshotCount": 151,
  "units": [
    {
      "alive": true,
      "attackCount": 28,
      "castCount": 3,
      "championApi": "TFT17_Jinx",
      "finalHp": 942.79,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2343.79,
      "totalDamageTaken": 216,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 216,
      "totalDamageTaken": 2343.79,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Semiconductor vs Rammus (Counter) 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 29,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Semiconductor vs Rammus (Counter)",
  "seed": 7,
  "snapshotCount": 587,
  "units": [
    {
      "alive": false,
      "attackCount": 16,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1190,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1303.25,
      "totalDamageTaken": 1268.5,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1036.75,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1268.5,
      "totalDamageTaken": 1303.25,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Semiconductor(Radiant) vs Rammus 1`] = `
{
  "duration": 21.0333,
  "logCounts": {
    "ability": 4,
    "attack": 31,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Semiconductor(Radiant) vs Rammus",
  "seed": 7,
  "snapshotCount": 633,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1290,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1222.81,
      "totalDamageTaken": 1358.5,
    },
    {
      "alive": true,
      "attackCount": 14,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1117.19,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1358.5,
      "totalDamageTaken": 1222.81,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Targetlock 2v2 (per-target first hit) 1`] = `
{
  "duration": 6.9,
  "logCounts": {
    "ability": 11,
    "attack": 70,
    "death": 2,
    "move": 11,
  },
  "scenarioName": "Jinx+Targetlock 2v2 (per-target first hit)",
  "seed": 7,
  "snapshotCount": 209,
  "units": [
    {
      "alive": true,
      "attackCount": 64,
      "castCount": 8,
      "championApi": "TFT17_Jinx",
      "finalHp": 387.5,
      "id": "player-0",
      "killCount": 2,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 4377.83,
      "totalDamageTaken": 602.5,
    },
    {
      "alive": false,
      "attackCount": 4,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 422.5,
      "totalDamageTaken": 2369.56,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 180,
      "totalDamageTaken": 2008.27,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > MasterYi(PsyOps)+ChemicalRadiant 2v2 (cleave) 1`] = `
{
  "duration": 3.8667,
  "logCounts": {
    "ability": 2,
    "attack": 16,
    "death": 2,
    "move": 9,
  },
  "scenarioName": "MasterYi(PsyOps)+ChemicalRadiant 2v2 (cleave)",
  "seed": 7,
  "snapshotCount": 118,
  "units": [
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 2,
      "championApi": "TFT17_MasterYi",
      "finalHp": 1980,
      "id": "player-0",
      "killCount": 2,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1293.68,
      "totalDamageTaken": 151.97,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 550,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 108.33,
      "totalDamageTaken": 588.08,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 700,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 43.64,
      "totalDamageTaken": 705.6,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Pyke(PsyOps)+TargetlockRadiant 2v2 (on_kill heal) 1`] = `
{
  "duration": 3.3333,
  "logCounts": {
    "ability": 2,
    "attack": 10,
    "death": 2,
    "move": 10,
  },
  "scenarioName": "Pyke(PsyOps)+TargetlockRadiant 2v2 (on_kill heal)",
  "seed": 7,
  "snapshotCount": 102,
  "units": [
    {
      "alive": true,
      "attackCount": 5,
      "castCount": 1,
      "championApi": "TFT17_Pyke",
      "finalHp": 1260,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1497.34,
      "totalDamageTaken": 157.76,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 550,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 108.1,
      "totalDamageTaken": 623.44,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 700,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 49.66,
      "totalDamageTaken": 873.9,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Rammus+GrenadeMod vs Jinx (Timer heal) 1`] = `
{
  "duration": 16.4667,
  "logCounts": {
    "ability": 2,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Rammus+GrenadeMod vs Jinx (Timer heal)",
  "seed": 7,
  "snapshotCount": 496,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1918.62,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2590,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1044,
      "totalDamageTaken": 906.12,
    },
    {
      "alive": false,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 906.12,
      "totalDamageTaken": 1044,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Rammus+Semiconductor vs Jinx (on_hit_taken counter) 1`] = `
{
  "duration": 14.9333,
  "logCounts": {
    "ability": 1,
    "attack": 21,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Rammus+Semiconductor vs Jinx (on_hit_taken counter)",
  "seed": 7,
  "snapshotCount": 450,
  "units": [
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 1720.5,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2540,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1091.25,
      "totalDamageTaken": 819.5,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 819.5,
      "totalDamageTaken": 1091.25,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Viktor(PsyOps)+DroneRadiant vs Rammus 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
    "status_expire": 1,
  },
  "scenarioName": "Viktor(PsyOps)+DroneRadiant vs Rammus",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Viktor",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 596.11,
      "totalDamageTaken": 1235.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1520.45,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1235.04,
      "totalDamageTaken": 596.11,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — timer (drone uplink) > Aurora+DroneUplink vs Rammus (Timer) 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+DroneUplink vs Rammus (Timer)",
  "seed": 7,
  "snapshotCount": 587,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 750.94,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1589.06,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 750.94,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — timer (drone uplink) > Aurora+RadiantDrone vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+RadiantDrone vs Rammus",
  "seed": 7,
  "snapshotCount": 587,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 776.48,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1563.52,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 776.48,
    },
  ],
  "winner": "enemy",
}
`;
